<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.lebezout</groupId>
	<artifactId>liquibase-ext-dbms-checker</artifactId>
	<packaging>jar</packaging>
	<version>1.0.0-SNAPSHOT</version>
	<description>Composant proposant des validations supplémentaires pour les fichiers changelogs pour certains DBMS cibles.</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>
    </properties>

	<developers>
		<developer>
			<id>lebezout</id>
			<name>LeBezout</name>
			<email>lebezout@gmail.com</email>
            <organizationUrl>https://github.com/LeBezout/</organizationUrl>
		</developer>
	</developers>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.4.2</version>
                <type>pom</type>
                <scope>import</scope>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.2.3</version>
			</dependency>
			<dependency>
                <groupId>org.liquibase</groupId>
                <artifactId>liquibase-core</artifactId>
				<version>3.8.9</version>
			</dependency>
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>1.4.200</version>
                <scope>test</scope>
            </dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- SCOPE TEST -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<scope>test</scope>
		</dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>test</scope>
        </dependency>
		<!-- SCOPE COMPIL : Liquibase API (sans la compatibilité yaml) -->
        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-core</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.yaml</groupId>
					<artifactId>snakeyaml</artifactId>
				</exclusion>
				<exclusion>
					<groupId>ch.qos.logback</groupId>
					<artifactId>logback-classic</artifactId>
				</exclusion>
			</exclusions>
        </dependency>
	</dependencies>

    <build>
		<plugins>
			<!-- Ajout des sources sur la phase 'verify' juste avant le install -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>source-jar</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<phase>verify</phase>
						<inherited>true</inherited>
					</execution>
				</executions>
			</plugin>
        </plugins>
    </build>
</project>
